WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
79120
[GTK] Null ResourceErrors are encoded/decoded as empty ResourceErrors
https://bugs.webkit.org/show_bug.cgi?id=79120
Summary
[GTK] Null ResourceErrors are encoded/decoded as empty ResourceErrors
Carlos Garcia Campos
Reported
2012-02-21 08:58:57 PST
We should be able to encode/decode null errors
Attachments
Patch
(1.97 KB, patch)
2012-02-21 09:01 PST
,
Carlos Garcia Campos
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2012-02-21 09:01:37 PST
Created
attachment 127983
[details]
Patch
Carlos Garcia Campos
Comment 2
2012-02-21 23:37:19 PST
Committed
r108452
: <
http://trac.webkit.org/changeset/108452
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug