[GTK] Null ResourceErrors are encoded/decoded as empty ResourceErrors https://bugs.webkit.org/show_bug.cgi?id=79120

Reviewed by Martin Robinson.

* Shared/gtk/WebCoreArgumentCodersGtk.cpp:
(CoreIPC::::encode): Encode a boolean to indicate whether it's a
Null error.
(CoreIPC::::decode): Check whether the error is Null and do not
continue decoding in such case.

git-svn-id: svn://svn.chromium.org/blink/trunk@108452 bbb929c8-8fbe-4397-9dbb-9b2b20218538